--- a/Objects.html
+++ b/Objects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objects</title>
   <script type="text/javascript" src="./live.js"></script>
+    <script src="./emptyObject.js"></script>
 </head>
 </head>
 <body>
