--- a/Objects.html
+++ b/Objects.html
@@ -7,6 +7,7 @@
     <title>Objects</title>
   <script type="text/javascript" src="./live.js"></script>
     <script src="./emptyObject.js"></script>
+    <script src="./salaries.js"></script>
 </head>
 </head>
 <body>
