function to multiply all numeric properties in object

--- a/Objects.html
+++ b/Objects.html
@@ -8,6 +8,8 @@
   <script type="text/javascript" src="./live.js"></script>
     <script src="./emptyObject.js"></script>
     <script src="./salaries.js"></script>
+    <script src="./multiplyNumeric.js"></script>
+
 </head>
 </head>
 <body>
