--- a/Objects.html
+++ b/Objects.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objects</title>
-  <script type="text/javascript" src="./live.js"></script>
-    <script src="./emptyObject.js"></script>
+    <script type="text/javascript" src="./live.js"></script>
+    <!-- <script src="./emptyObject.js"></script> 
     <script src="./salaries.js"></script>
-    <script src="./multiplyNumeric.js"></script>
+        <script src="./multiplyNumeric.js"></script>
+        <script src="./clone.js"></script> -->
+        <script src="./countOfproperty.js"></script>
+       
+   
 
 </head>
 </head>
