count of sum of salaries

--- a/Objects.html
+++ b/Objects.html
@@ -11,6 +11,8 @@
         <script src="./multiplyNumeric.js"></script>
         <script src="./clone.js"></script> -->
         <script src="./countOfproperty.js"></script>
+        <script src="./sumSalaries.js"></script>
+       
        
    
 
