--- a/Objects.html
+++ b/Objects.html
@@ -10,8 +10,9 @@
     <script src="./salaries.js"></script>
         <script src="./multiplyNumeric.js"></script>
         <script src="./clone.js"></script> -->
-        <script src="./countOfproperty.js"></script>
-        <script src="./sumSalaries.js"></script>
+        <!-- <script src="./countOfproperty.js"></script>
+        <script src="./sumSalaries.js"></script> -->
+        <script src="./recordCollection.js"></script>
        
        
    
