finding sum using recursion

--- a/Objects.html
+++ b/Objects.html
@@ -12,7 +12,11 @@
         <script src="./clone.js"></script> -->
         <!-- <script src="./countOfproperty.js"></script>
         <script src="./sumSalaries.js"></script> -->
-        <script src="./recordCollection.js"></script>
+        <!-- <script src="./recordCollection.js"></script> -->
+        <!-- <script src="./recursion.js"></script> -->
+        <!-- <script src="./sumTo.js"></script> -->
+        <script src="./factorial.js"></script>
+
        
        
    
