returning  numbers that fall in range

--- a/Objects.html
+++ b/Objects.html
@@ -15,7 +15,9 @@
         <!-- <script src="./recordCollection.js"></script> -->
         <!-- <script src="./recursion.js"></script> -->
         <!-- <script src="./sumTo.js"></script> -->
-        <script src="./factorial.js"></script>
+        <!-- <script src="./factorial.js"></script> -->
+        <!-- <script src="./recusion2.js"></script> -->
+        <script src="./rangeOfNumbers.js"></script>
 
        
        
