adding default value, if a function calls without some parameter

--- a/Objects.html
+++ b/Objects.html
@@ -17,7 +17,9 @@
         <!-- <script src="./sumTo.js"></script> -->
         <!-- <script src="./factorial.js"></script> -->
         <!-- <script src="./recusion2.js"></script> -->
-        <script src="./rangeOfNumbers.js"></script>
+        <!-- <script src="./rangeOfNumbers.js"></script> -->
+        <script src="./object.freeze.js"></script>
+        <script src="./default_value_ofParametr.js"></script>
 
        
        
